corpus/c/preprocessor_directive/case-01/snapshots/gcc13_14/single_sink_structured/render.debug.txt
error: [syntax] #error macro guard missing @ src/main.c:1:2
raw : #error macro guard missing
| src/main.c:1:2
| #error macro guard missing
|  ^
macro: preserved
debug: rule_id=rule.family.preprocessor_directive.message_terms
debug: matched_conditions=message_contains=#error, phase=preprocess
explain: repair_unit=repair-unit:node-sarif-0-0 proof=Unresolved visibility=NeverHidden
explain: member=node:sarif-0-0 target=DiagnosticNode { node_ref: "sarif-0-0" } unresolved=false
explain: raw_capture=diagnostics.sarif